# Limit-Order-Book

./: .gitignore  CMakeLists.txt  PHASE_15.md  README.md  guide.md
benchmarks/: bench_parser.cpp  bench_runner.cpp  test_benchmark.cpp
data/: crossing_orders.csv  sample_orders.csv  spread_orders.csv
docs/: API.md  ARCHITECTURE.md
include/elob/: engine_mt.hpp  event.hpp  ingestor.hpp  logger.hpp  matching_engine.hpp  metrics.hpp  order.hpp  order_book.hpp  price_level.hpp
scripts/: analyze_benchmark.py  plot_benchmark.py  requirements.txt
src/: event.cpp  ingestor.cpp  logger.cpp  main.cpp  matching_engine.cpp  metrics.cpp  order.cpp  order_book.cpp  price_level.cpp  replay.cpp  trade.cpp
src/data/: event.cpp  event.hpp  ingestor.cpp  ingestor.hpp
src/engine/: matching_engine.cpp  matching_engine.hpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  price_level.cpp  price_level.hpp  trade.cpp  trade.hpp
src/logging/: logger.cpp  logger.hpp  replay.cpp
src/utils/: engine_lockfree.hpp  engine_mt.hpp  event_parser.hpp  lockfree_queue.hpp  metrics.cpp
tests/: bench_runner.cpp  test_benchmark.cpp  test_cancel_modify.cpp  test_edgecases.cpp  test_ingest.cpp  test_mt.cpp  test_replay.cpp
tests/concurrency/: test_lockfree.cpp  test_mt.cpp
tests/replay/: test_replay.cpp
tests/unit/: test_cancel_modify.cpp  test_edgecases.cpp  test_ingest.cpp  test_parser.cpp
